--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -29,17 +29,79 @@
         <Label x:Name="FileNameLabel" FontWeight="Bold" Visibility="Hidden" Content="Filename" HorizontalAlignment="Left" Margin="30,83,0,0" VerticalAlignment="Top" Foreground="White"/>
         <TextBox x:Name="txtBox1" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,144,0,0"/>
 
-        <Button x:Name="saveBtn" Visibility="Hidden" Foreground="White" Content="Save file" HorizontalAlignment="Left" Margin="171,530,0,0" VerticalAlignment="Top" Width="88" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38" />
-        <Button x:Name="CreateNoteBtn" FontFamily="Bahnschrift" Content="Create a note" Background="Transparent" BorderBrush="White"  HorizontalAlignment="Left" Margin="398,0,0,0" VerticalAlignment="Center" Click="CreateNoteBtn_Click" Height="76" Width="168" Foreground="White"/>
-        <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" HorizontalAlignment="Left" Margin="320,530,0,0" VerticalAlignment="Top" Width="88" Foreground="White" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" Height="38"/>
+        <Button x:Name="saveBtn" Visibility="Hidden" Cursor="Hand" Foreground="White" Content="Save file" HorizontalAlignment="Left" Margin="171,530,0,0" VerticalAlignment="Top" Width="88" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        
+        <Button x:Name="CreateNoteBtn" FontFamily="Bahnschrift" Cursor="Hand" Content="Create a note" Background="Transparent" BorderBrush="White"  HorizontalAlignment="Left" Margin="398,0,0,0" VerticalAlignment="Center" Click="CreateNoteBtn_Click" Height="76" Width="168" Foreground="White">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        
+        <Button x:Name="clearBtn" Content="Clear Text" Visibility="Hidden" Cursor="Hand" HorizontalAlignment="Left" Margin="320,530,0,0" VerticalAlignment="Top" Width="88" Foreground="White" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="clearBtn_Click" RenderTransformOrigin="0.5,0.5" Height="38">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
 
 
 
-        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin= "469,530,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Foreground="White" Background="Transparent" RenderTransformOrigin="0.5,0.5" BorderBrush="White" Width="87" Height="38"/>
-        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin= "618,530,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="White" Foreground="White" Background="Transparent" Width="87" Height="38"/>
+        <Button x:Name="DeleteFileBtn" Visibility="Hidden" Content="Delete file" Cursor="Hand" FontWeight="Bold" FontFamily="Bahnschrift" HorizontalAlignment="Left" Margin= "469,530,0,0" VerticalAlignment="Top" Click="DeleteFileBtn_Click" Foreground="White" Background="Transparent" RenderTransformOrigin="0.5,0.5" BorderBrush="White" Width="87" Height="38">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+            
+        <Button x:Name="UpdateBtn" Content="Update file" Visibility="Hidden" Cursor="Hand" HorizontalAlignment="Left" FontFamily="Bahnschrift" FontWeight="Bold" Margin= "618,530,0,0" VerticalAlignment="Top" Click="UpdateBtn_Click" BorderBrush="White" Foreground="White" Background="Transparent" Width="87" Height="38">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
 
 
-        <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="870,42,0,0" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click" ClickMode="Hover">
+        <Button x:Name="WheatBtn" Content="" HorizontalAlignment="Left" Margin="870,42,0,0" Cursor="Hand" VerticalAlignment="Top" BorderBrush="Wheat" Background="Wheat" Width="29" Height="24" Click="WheatBtn_Click" ClickMode="Hover">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -47,7 +109,16 @@
             </Button.Resources>
         </Button>
 
-        <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="829,42,0,0" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="White" Height="24" Click="WhiteBtn_Click" ClickMode="Hover">
+        <Button x:Name="WhiteBtn" Content="" HorizontalAlignment="Left" Margin="829,42,0,0" Cursor="Hand" VerticalAlignment="Top" Width="29" Background="White" BorderBrush="White" Height="24" Click="WhiteBtn_Click" ClickMode="Hover">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -56,7 +127,16 @@
         </Button>
 
 
-        <Button x:Name="BlackBtn" Content="" HorizontalAlignment="Left" Margin="787,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Background="#FF2F2F2F" Click="BlackBtn_Click" BorderBrush="#FF2F2F2F" ClickMode="Hover">
+        <Button x:Name="BlackBtn" Content="" HorizontalAlignment="Left" Cursor="Hand" Margin="787,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Background="#FF2F2F2F" Click="BlackBtn_Click" BorderBrush="#FF2F2F2F" ClickMode="Hover">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -64,7 +144,16 @@
             </Button.Resources>
         </Button>
 
-        <Button x:Name="OrangeGradientBtn" Content="" HorizontalAlignment="Left" Margin="747,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="OrangeGradientBtn_Click" Background="#FFFF7550" BorderBrush="{x:Null}" ClickMode="Hover">
+        <Button x:Name="OrangeGradientBtn" Content="" HorizontalAlignment="Left" Cursor="Hand" Margin="747,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="OrangeGradientBtn_Click" Background="#FFFF7550" BorderBrush="{x:Null}" ClickMode="Hover">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -72,7 +161,16 @@
             </Button.Resources>
         </Button>
 
-        <Button x:Name="PurpleGradientBtn" Content="" HorizontalAlignment="Left" Margin="707,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="PurpleGradientBtn_OnClick" Background="#2E2157" BorderBrush="{x:Null}" ClickMode="Hover">
+        <Button x:Name="PurpleGradientBtn" Content="" HorizontalAlignment="Left" Cursor="Hand" Margin="707,42,0,0" VerticalAlignment="Top" Width="29" Height="24" Click="PurpleGradientBtn_OnClick" Background="#2E2157" BorderBrush="{x:Null}" ClickMode="Hover">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="60"/>
@@ -81,14 +179,35 @@
         </Button>
 
 
-        <Button x:Name="closeBtn" Content="" HorizontalAlignment="Left" Margin="954,22,0,0" VerticalAlignment="Top" Width="25" Height="27" Click="closeBtn_Click" BorderBrush="{x:Null}">
+        <Button x:Name="closeBtn" Content="" HorizontalAlignment="Left" Margin="954,22,0,0" VerticalAlignment="Top" Width="25" Height="27" Cursor="Hand" Click="closeBtn_Click" BorderBrush="{x:Null}">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
             <Button.Background>
                 <ImageBrush ImageSource="https://static.thenounproject.com/png/530778-200.png"/>
             </Button.Background>
         </Button>
 
         <Label x:Name="vLabel" Content="v.1.0.0" HorizontalAlignment="Left" Margin="886,537,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Bahnschrift"/>
-        <Button x:Name="MainBackBtn" Visibility="Hidden" Content="Back" HorizontalAlignment="Left" Margin="35,459,0,0" VerticalAlignment="Top" Height="35" Width="66" Background="{x:Null}" Foreground="White" BorderBrush="White" FontFamily="Bahnschrift" Click="MainBackBtn_Click"/>
+        
+        <Button x:Name="MainBackBtn" Visibility="Hidden" Content="Back" Cursor="Hand" HorizontalAlignment="Left" Margin="35,459,0,0" VerticalAlignment="Top" Height="35" Width="66" Background="{x:Null}" Foreground="White" BorderBrush="White" FontFamily="Bahnschrift" Click="MainBackBtn_Click">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        
         <ListBox x:Name="NamesBox" Visibility="Hidden" ItemsSource="{Binding TxtFileNames}" Margin="560,144,16,223" SelectionChanged="NamesBox_SelectionChanged"/>
         <Image x:Name="Circle2" Visibility="Visible" HorizontalAlignment="Left" Height="200" Margin="741,93,0,0" VerticalAlignment="Top" Width="242" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="Black"/>
         <Image x:Name="Circle1" HorizontalAlignment="Left" Height="280" Margin="-39,122,0,0" VerticalAlignment="Top" Width="326" Source="https://circle.so/wp-content/uploads/Ellipse-261.png" OpacityMask="#FFF9EDED" Opacity="0.4"/>
