--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="Notes.Views.MainWindow"
+﻿<mah:MetroWindow x:Class="Notes.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Notes"
+      xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Title="Notes" Height="620" Width="1000"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
+        WindowStyle="SingleBorderWindow"
         >
 
 
-    <Grid x:Name="MainGrid" Margin="-9,-14,-9,-37" Height="NaN">
+    <Grid x:Name="MainGrid" Margin="-9,0,-9,-37" Height="NaN">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="#2E2157"/>
@@ -25,9 +25,9 @@
 
         <Label x:Name="AppLabel" FontWeight="Bold" FontFamily="Bahnschrift" Content="Notes" HorizontalAlignment="Left" Margin="30,26,0,0" VerticalAlignment="Top" Height="35" Width="84" FontSize="26" Foreground="#7AD7F0"/>
 
-        <TextBox x:Name="FileNameBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="35,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="251"/>
+        <TextBox x:Name="FileNameBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="35,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="251" FontFamily="Bahnschrift"/>
         <Label x:Name="FileNameLabel" FontWeight="Bold" Visibility="Hidden" Content="Filename" HorizontalAlignment="Left" Margin="30,83,0,0" VerticalAlignment="Top" Foreground="White"/>
-        <TextBox x:Name="txtBox1" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,144,0,0"/>
+        <TextBox x:Name="txtBox1" Visibility="Hidden" AcceptsReturn="true" AcceptsTab="true" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="484" Height="296" Margin="35,144,0,0" FontFamily="Bahnschrift" />
 
         <Button x:Name="saveBtn" Visibility="Hidden" Cursor="Hand" Foreground="White" Content="Save file" HorizontalAlignment="Left" Margin="171,530,0,0" VerticalAlignment="Top" Width="88" Background="Transparent" BorderBrush="White" FontFamily="Bahnschrift" FontWeight="Bold" Click="saveBtn_Click" Height="38">
             <Button.Template>
@@ -178,22 +178,6 @@
             </Button.Resources>
         </Button>
 
-
-        <Button x:Name="closeBtn" Content="" HorizontalAlignment="Left" Margin="954,22,0,0" VerticalAlignment="Top" Width="25" Height="27" Cursor="Hand" Click="closeBtn_Click" BorderBrush="{x:Null}">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-            <Button.Background>
-                <ImageBrush ImageSource="https://static.thenounproject.com/png/530778-200.png"/>
-            </Button.Background>
-        </Button>
-
         <Label x:Name="vLabel" Content="v.1.0.0" HorizontalAlignment="Left" Margin="886,537,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Bahnschrift"/>
         
         <Button x:Name="MainBackBtn" Visibility="Hidden" Content="Back" Cursor="Hand" HorizontalAlignment="Left" Margin="35,459,0,0" VerticalAlignment="Top" Height="35" Width="66" Background="{x:Null}" Foreground="White" BorderBrush="White" FontFamily="Bahnschrift" Click="MainBackBtn_Click">
@@ -224,4 +208,4 @@
         </Label>
         <Label x:Name="NamesBoxLabel" Content="Files:" Visibility="Hidden" HorizontalAlignment="Left" Margin="560,113,0,0" VerticalAlignment="Top" Width="52" FontFamily="Bahnschrift" Foreground="White" FontSize="16"/>
     </Grid>
-</Window>
+</mah:MetroWindow>
